--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "zod": "^3.25.30"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -45,5 +46,14 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@swc/core",
+      "@tailwindcss/oxide"
+    ],
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
